--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,6 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[dependencies]
+[dependencies.sqlx]
+version = "0.5.13"
+features = ["macros", "postgres", "runtime-tokio-rustls"]
