feat: swap `println` for `tracing`

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,9 @@ name = "sqlx-bootstrap"
 version = "0.1.0"
 edition = "2021"
 
+[dependencies]
+tracing = "0.1.40"
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies.sqlx]
